# jaraco.functools

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  azure-pipelines.yml  conftest.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_functools.py  tox.ini
.github/: FUNDING.yml
docs/: conf.py  index.rst
jaraco/: functools.py
jaraco/functools/: __init__.py  __init__.pyi  functools.pyi
jaraco/util/: functools.py
newsfragments/: +20d37676.feature.rst  +464e2048.feature.rst  +50550895.bugfix.rst  +d110f8d4.feature.rst  +e0c457c7.feature.rst  21.removal.rst  22.feature.rst  23.feature.rst  29.bugfix.rst
tests/: requirements.txt
