[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.functools
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Functools like those found in stdlib
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.functools
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
namespace_packages = jaraco
include_package_data = true
python_requires = >=2.7
install_requires =
	more_itertools
	backports.functools_lru_cache >= 1.0.3; python_version == "2.7"
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	six
	backports.unittest_mock
	jaraco.classes

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
